syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "MapMarkFromType.proto";
import "Vector.proto";
import "MapMarkPointType.proto";


message MapMarkPoint {
	string name = 2;
	uint32 map_layer_id = 8;
	uint32 monster_id = 5;
	uint32 quest_id = 7;
	uint32 scene_id = 1;
	MapMarkFromType from_type = 6;
	MapMarkPointType point_type = 4;
	Vector pos = 3;
}