syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityString.proto";
import "PlayerDieType.proto";


message WorldPlayerDieNotify {
	uint32 murderer_entity_id = 11;
	PlayerDieType die_type = 6;
	oneof entity {
		uint32 gadget_id = 12;
		uint32 monster_id = 4;
	}
}